Implementacao endpoints agendamento
