# src/main/java/com/fiap/agendamento/infrastructure/config/usecase/agendamento/ConsultarAgendamentoPorIdConfig.java
@@ -1,0 +1,15 @@
+package com.fiap.agendamento.infrastructure.config.usecase.agendamento;
+
+import com.fiap.agendamento.application.gateway.AgendamentoGateway;
+import com.fiap.agendamento.application.usecase.agendamento.implementation.ConsultarAgendamentoPorIdUseCaseImpl;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
+@Configuration
+public class ConsultarAgendamentoPorIdConfig {
+
+    @Bean
+    public ConsultarAgendamentoPorIdUseCaseImpl consultarAgendamentoPorId(AgendamentoGateway agendamentoGateway) {
+        return new ConsultarAgendamentoPorIdUseCaseImpl(agendamentoGateway);
+    }
+}
